# fixmath

./: .gitignore  AUTHORS.md  CMakeLists.txt  COPYRIGHT.md  LICENCE.md  README.md
checktests/: fixtest.c
include/: fixmath.h  fixmath_arch.h  fixmath_export.h  fixmath_impl.h  fixmath_macro.h  fixmath_ver.h
prof/: fixprof.c
sandbox/: test.c
src/: fixmath.c  fixmath_impl.c  fixmath_str.c  fixmath_ver.c
tools/: encode.m  remez.m
